# atlas-quicklook

./: README.md  environment.yml  install.sh  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md
atlas_ql/: __init__.py
atlas_ql/utils/: __init__.py  bls.py  io.py  paths.py  plotting.py  timeseries.py
atlas_ql/utils/.ipynb_checkpoints/: bls-checkpoint.py  io-checkpoint.py  paths-checkpoint.py  plotting-checkpoint.py  timeseries-checkpoint.py
atlas_quicklook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: atlas_bls_playground.ipynb  atlas_lc_playground.ipynb
notebooks/.ipynb_checkpoints/: atlas_bls_playground-checkpoint.ipynb  atlas_lc_playground-checkpoint.ipynb
