[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-quicklook"
version = "0.1.0"
description = "ATLAS light curve quick look utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipython",
]

[tool.setuptools.packages]
find = {where = ["."], include = ["atlas_ql*"]}
